force-app/main/default/objects/Notion_Sync_Log__c/Notion_Sync_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks synchronization status between Salesforce and Notion</description>
    <label>Notion Sync Log</label>
    <nameField>
        <displayFormat>NSL-{0000000}</displayFormat>
        <label>Sync Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notion Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>