force-app/main/default/objects/Notion_Sync_Log__c/fields/API_Calls_Made__c.field-meta.xml
<CustomField>
    <fullName>API_Calls_Made__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of API calls made during this sync operation</description>
    <label>API Calls Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>