force-app/main/default/objects/Notion_Sync_Log__c/fields/Callouts_Used__c.field-meta.xml
<CustomField>
    <fullName>Callouts_Used__c</fullName>
    <description>Number of callouts used during sync operation</description>
    <label>Callouts Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>