force-app/main/default/objects/Notion_Sync_Log__c/fields/CPU_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Used__c</fullName>
    <description>CPU time used in milliseconds during sync operation</description>
    <label>CPU Time Used (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>