force-app/main/default/objects/Notion_Sync_Log__c/fields/Deduplication_Deferred__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_Deferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deduplication Deferred</label>
    <type>Checkbox</type>
</CustomField>