force-app/main/default/objects/Notion_Sync_Log__c/fields/Duplicates_Found__c.field-meta.xml
<CustomField>
    <fullName>Duplicates_Found__c</fullName>
    <label>Duplicates Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>