force-app/main/default/objects/Notion_Sync_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Message details about the sync operation</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>