force-app/main/default/objects/Notion_Sync_Log__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <description>The actual timestamp when the sync event occurred, used for accurate deduplication</description>
    <label>Event Timestamp</label>
    <type>DateTime</type>
</CustomField>