force-app/main/default/objects/Notion_Sync_Log__c/fields/Last_Retry_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Retry_Time__c</fullName>
    <description>Timestamp of the last retry attempt</description>
    <label>Last Retry Time</label>
    <type>DateTime</type>
</CustomField>