force-app/main/default/objects/Notion_Sync_Log__c/fields/Next_Retry_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry_Time__c</fullName>
    <description>When the next retry attempt should occur</description>
    <label>Next Retry Time</label>
    <type>DateTime</type>
</CustomField>