force-app/main/default/objects/Notion_Sync_Log__c/fields/Notion_Page_Id__c.field-meta.xml
<CustomField>
    <fullName>Notion_Page_Id__c</fullName>
    <description>ID of the Notion page created or updated</description>
    <label>Notion Page ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>