force-app/main/default/objects/Notion_Sync_Log__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>API name of the Salesforce object</description>
    <label>Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>