force-app/main/default/objects/Notion_Sync_Log__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <description>Type of operation performed</description>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
                <label>Create</label>
            </value>
            <value>
                <fullName>UPDATE</fullName>
                <label>Update</label>
            </value>
            <value>
                <fullName>DELETE</fullName>
                <label>Delete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>