force-app/main/default/objects/Notion_Sync_Log__c/fields/Original_Error_Time__c.field-meta.xml
<CustomField>
    <fullName>Original_Error_Time__c</fullName>
    <description>Timestamp when the first failure occurred</description>
    <label>Original Error Time</label>
    <type>DateTime</type>
</CustomField>