force-app/main/default/objects/Notion_Sync_Log__c/fields/Rate_Limit_Retry_After__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_Retry_After__c</fullName>
    <description>Number of seconds to wait before retrying (from Notion API Retry-After header)</description>
    <label>Rate Limit Retry After (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>