force-app/main/default/objects/Notion_Sync_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>ID of the Salesforce record that was synced</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>